--- a/index.html
+++ b/index.html
@@ -21,12 +21,13 @@
           <header class="navbar">
                <ul class="navbar-main">
                     <li class="navbar-home">
-                          <a class="navlink " href="./index.html">
+                         <a class="navlink home" href="./index.html">
                               <div class="navbar-home-inside">
                                    <img class="img brand" src="./media/logo.png" alt="Home">
-                                   <p>Cardomania</p>
+                                  <p>Cardomania</p>
                               </div>
                          </a>
+
                     </li>
                     <li>
                          <ul class="navbar-list">
@@ -57,6 +58,9 @@
                     </li>
                </ul>
           </header>
+          <section class="main-screen">
+               <img class='img-content' src="./media/main-content.jpg" alt="">         
+          </section>
           <section class="content">
                Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi error quaerat aliquam facilis dicta commodi delectus itaque recusandae veniam velit ab dolorum, excepturi, consequatur esse cum dolorem tempora. Architecto, et?
                Adipisci tempora omnis dolores reprehenderit quod sint. Molestias ipsam inventore voluptas delectus. Perferendis amet dolores in possimus provident! Voluptates voluptatem tenetur aspernatur ducimus laudantium quisquam quos veritatis consequuntur delectus vel?
