--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           <footer class="footer">
                infto
           </footer>
-          
+          <!-- update -->
      </div>
      <!-- navbar TOGGLER -->
      <script src='./js/app.js'></script>
