--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
      <meta charset="UTF-8">
      <meta http-equiv="X-UA-Compatible" content="IE=edge">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <title>Karty</title>
+     <title>Amarynares | HOME</title>
      <link rel="stylesheet" href="./style/main.css">
      <link rel="stylesheet" href="./style/transition.css">
 
@@ -24,7 +24,7 @@
                          <a class="navlink home" href="./index.html">
                               <div class="navbar-home-inside">
                                    <img class="img brand" src="./media/logo.png" alt="Home">
-                                  <p>Cardomania</p>
+                                  <p>Amarynares</p>
                               </div>
                          </a>
 
@@ -51,15 +51,19 @@
                                         Rest
                                    </a>
                               </li>
+                              <li class="nav-optionx nav-option">
+                                   <button class="styl"><img id='switch' src="./media/on.png" alt="on"></button>
+                              </li>
                          </ul>
                     </li>
-                    <li class="navToggler">
+                    <li class="navToggler ">
                          <button class="toggler" id='toggler'>|||</button>
                     </li>
                </ul>
           </header>
           <section class="main-screen">
-               <img class='img-content' src="./media/main-content.jpg" alt="">         
+               <img class='img-content' src="./media/main-content.jpg" alt="">   
+               <h1>The least intresting website ever</h1>      
           </section>
           <section class="content">
                Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi error quaerat aliquam facilis dicta commodi delectus itaque recusandae veniam velit ab dolorum, excepturi, consequatur esse cum dolorem tempora. Architecto, et?
