dark mode + navbar borders

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <title>Amarynares | HOME</title>
      <link rel="stylesheet" href="./style/main.css">
+
+     <link rel="stylesheet" id='page_colors' href="./style/mode_main.css">
+
      <link rel="stylesheet" href="./style/transition.css">
 
      <!-- GFONTS -->
@@ -33,7 +36,7 @@
                          <ul class="navbar-list">
                               <li class="nav-option">
                                    <a href="./index.html" class="navlink">
-                                        Cards
+                                        Home
                                    </a>
                               </li>
                               <li class="nav-option">
