--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <title>Amarynares | HOME</title>
      <link rel="stylesheet" href="./style/main.css">
+     <link rel="stylesheet" href="./style/toggler.css">
 
-     <link rel="stylesheet" href="./style/burger.css">
 
      <link rel="stylesheet" id='page_colors' href="./style/mode_main.css">
 
@@ -62,7 +62,13 @@
                          </ul>
                     </li>
                     <li class="navToggler ">
-                         <button class="toggler" id='toggler'>|||</button>
+                         <button class="toggler" id='toggler'>
+                              <div class="menu-btn">
+                                   <div class="menu-btn_burger">
+                                        
+                                   </div>
+                              </div>
+                         </button>
                     </li>
                </ul>
           </header>
