--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                          <a class="navlink home" href="./index.html">
                               <div class="navbar-home-inside">
                                    <img class="img brand" src="./media/logo.png" alt="Home">
-                                  <p>Amarynares</p>
+                                  <p class='navlink'>Amarynares</p>
                               </div>
                          </a>
 
