--- a/index.html
+++ b/index.html
@@ -101,6 +101,21 @@
                Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi error quaerat aliquam facilis dicta commodi delectus itaque recusandae veniam velit ab dolorum, excepturi, consequatur esse cum dolorem tempora. Architecto, et?
                Adipisci tempora omnis dolores reprehenderit quod sint. Molestias ipsam inventore voluptas delectus. Perferendis amet dolores in possimus provident! Voluptates voluptatem tenetur aspernatur ducimus laudantium quisquam quos veritatis consequuntur delectus vel?
           </section>
+          <section class="cards">
+               <div class="arr-left">
+                    <p class="arr-left-in">
+                         <button class="btn-prev"><</button>     
+                    </p>     
+               </div>
+               <div class="card card_1">
+                    <img src="./media/card_1.jpg" alt="card_1" class="img_card ">
+                    <p class="card-author">Autor i co robdsajkfhzs;kgjhdsaflkgjhi</p>
+                    <p class="card-description">Lorem ipsum dolor sit amet consectetur adipisicing elit.  autem cupiditate, non, porro debitis </p>
+               </div>
+               <div class="arr-right">
+                    <p class="arr-right-in"> <button class="btn-next">></button></p>
+               </div>
+          </section>
           <footer class="footer">
                infto
           </footer>
