--- a/index.html
+++ b/index.html
@@ -107,11 +107,27 @@
                          <button class="btn-prev"><</button>     
                     </p>     
                </div>
-               <div class="card card_1">
+               <div class="card card_0">
                     <img src="./media/card_1.jpg" alt="card_1" class="img_card ">
-                    <p class="card-author">Autor i co robdsajkfhzs;kgjhdsaflkgjhi</p>
+                    <p class="card-author">pierwszq karata</p>
                     <p class="card-description">Lorem ipsum dolor sit amet consectetur adipisicing elit.  autem cupiditate, non, porro debitis </p>
                </div>
+               <div class="card card_1 d_none">
+                    <img src="./media/card_2.jpg" alt="card_2" class="img_card ">
+                    <p class="card-author">driga karta</p>
+                    <p class="card-description">Loremasdasd ipsum dolor sit amet consectetur adipisicing elit.  autem cupiditate, non, porro debitis </p>
+               </div>
+               <div class="card card_2 d_none">
+                    <img src="./media/card_2.jpg" alt="card_2" class="img_card ">
+                    <p class="card-author">trzeoa karta</p>
+                    <p class="card-description">Loremasdasd ipsum dolor sit amet consectetur adipisicing elit.  autem cupiditate, non, porro debitis </p>
+               </div>
+               <div class="card card_3 d_none">
+                    <img src="./media/card_2.jpg" alt="card_2" class="img_card ">
+                    <p class="card-author">czwarta karta</p>
+                    <p class="card-description">Loremasdasd ipsum dolor sit amet consectetur adipisicing elit.  autem cupiditate, non, porro debitis </p>
+               </div>
+               
                <div class="arr-right">
                     <p class="arr-right-in"> <button class="btn-next">></button></p>
                </div>
