--- a/index.html
+++ b/index.html
@@ -108,24 +108,28 @@
                     </p>     
                </div>
                <div class="card card_0">
-                    <img src="./media/card_1.jpg" alt="card_1" class="img_card ">
-                    <p class="card-author">pierwszq karata</p>
-                    <p class="card-description">Lorem ipsum dolor sit amet consectetur adipisicing elit.  autem cupiditate, non, porro debitis </p>
+                    <img src="./media/card_0.gif" alt="#e72d52" class="img_card ">
+                    <p class="card-author">Pitbull</p>
+                    <p class="card-description">Historia tej rasy sięga ponad 150 lat. Rasą, która po części stworzyła obecnego pit bulla był buldog. </p>
                </div>
                <div class="card card_1 d_none">
-                    <img src="./media/card_2.jpg" alt="card_2" class="img_card ">
-                    <p class="card-author">driga karta</p>
-                    <p class="card-description">Loremasdasd ipsum dolor sit amet consectetur adipisicing elit.  autem cupiditate, non, porro debitis </p>
+                    <img src="./media/card_1.gif" alt="#f6a05e" class="img_card ">
+                    <p class="card-author">Buldog amerykański</p>
+                    <p class="card-description">
+                         Krępy i silny na pierwszy rzut oka. Wyróżnia się dwa typy budowy; tzw. Johnson type i Scott type. Istnieje też pośredni typ, będący hybrydą wymienionych[     
+                    </p>
                </div>
                <div class="card card_2 d_none">
-                    <img src="./media/card_2.jpg" alt="card_2" class="img_card ">
-                    <p class="card-author">trzeoa karta</p>
-                    <p class="card-description">Loremasdasd ipsum dolor sit amet consectetur adipisicing elit.  autem cupiditate, non, porro debitis </p>
+                    <img src="./media/card_2.gif" alt="#d5e0b6" class="img_card ">
+                    <p class="card-author">Kundelek</p>
+                    <p class="card-description"> Między mieszańcem (wielorasowcem) a kundlem istnieje wyraźne rozgraniczenie. Mieszaniec jest wynikiem skrzyżowania dwóch odrębnych ras.</p>
                </div>
                <div class="card card_3 d_none">
-                    <img src="./media/card_2.jpg" alt="card_2" class="img_card ">
-                    <p class="card-author">czwarta karta</p>
-                    <p class="card-description">Loremasdasd ipsum dolor sit amet consectetur adipisicing elit.  autem cupiditate, non, porro debitis </p>
+                    <img src="./media/card_3.gif" alt="#86c3aa" class="img_card ">
+                    <p class="card-author">Shiba Inu </p>
+                    <p class="card-description">
+                         edna z sześciu ras psów japońskich, należąca do szpiców i psów w typie pierwotnym, zaliczona do sekcji szpiców azjatyckich i ras pokrewnych. Nie podlega próbom pracy.     
+                    </p>
                </div>
                
                <div class="arr-right">
